--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -56,15 +56,6 @@ main
     margin-bottom: 12px
     overflow: hidden
 
-@keyframes typing
-    from
-        width: 0
-    to 
-        width: 100%
-@keyframes cursor
-    50%
-        border-right-color: transparent
-
 .descricao
     color: #253b46
     font-size: 1.2rem
@@ -114,7 +105,7 @@ main
     text-shadow: -8px 0 4px rgba(0, 0, 0, 0.5)
 
 .about-container
-    height: 85vh
+    min-height: 85vh
     display: grid
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr))
     align-items: center
@@ -128,6 +119,9 @@ main
     justify-items: center
     gap: 1rem
 
+.projects-container
+    min-height: 70vh
+
 .projects-title 
     display: flex
     justify-content: center
@@ -140,6 +134,7 @@ main
     text-shadow: 1px 3px 8px rgba(0,0,0,0.2)
 
 .skills-container
+    min-height: 60vh
     font-family: 'Ubuntu Mono', monospace
     font-size: 1.8rem
     margin-bottom: 3rem
@@ -239,6 +234,24 @@ main
     background-color: #61ac2f
     width: 50%
 
+// ANIMAÇÕES 
+
+@keyframes typing
+    from
+        width: 0
+    to 
+        width: 100%
+@keyframes cursor
+    50%
+        border-right-color: transparent
+    
+@keyframes fade
+    from 
+        opacity: 0
+    to  
+        opacity: 1
+
+// REPONSIVIDADE DE TELAS
 
 @media screen and (max-width: 350px)
     main
