--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -149,6 +149,7 @@ main
     padding-left: 2rem
     display: flex
     justify-content: center
+    align-items: center
     flex-direction: column
 
 .skill h4 
@@ -379,6 +380,7 @@ main
 
     .skill
         padding: 0.4rem 0.4rem 0.4rem 0.4rem
+        align-items: stretch
 
     .skills-container
         margin-left: 3.5rem
