links repositório + deploy

--- a/src/styles/Card.sass
+++ b/src/styles/Card.sass
@@ -79,8 +79,11 @@
     align-items: center
     flex-direction: row
     gap: 0.5rem
+    a
+        font-family: 'Ubuntu Mono', monospace
+        text-decoration: none
+        color: #252525
 button
-    font-family: 'Ubuntu Mono', monospace
     transition: transform 0.25s ease
     &:hover
         cursor: pointer
