contacts section + footer

--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -144,6 +144,7 @@ main
     justify-content: center
     gap: 1rem
     white-space: nowrap
+    color: #252525
 
 .skill
     padding-left: 2rem
@@ -234,6 +235,25 @@ main
 .excel 
     background-color: #61ac2f
     width: 50%
+
+.contacts-container
+    min-height: 60vh
+    font-family: 'Ubuntu Mono', monospace
+    font-size: 2rem
+    margin-bottom: 3rem
+    display: flex
+    flex-direction: column
+    align-items: start
+    justify-content: center
+    white-space: nowrap
+    padding-left: 5.5rem
+    gap: 1.6rem
+    color: #252525
+
+.contact
+    display: flex
+    align-items: center
+    gap: 1.4rem
 
 // ANIMAÇÕES 
 
