responsividade contatos e footer

--- a/src/styles/Card.sass
+++ b/src/styles/Card.sass
@@ -88,3 +88,19 @@ button
     &:hover
         cursor: pointer
         transform: scale(1.15)
+
+@media screen and (min-width: $xxxl)
+    .card
+        width: 370px
+        height: 520px
+
+    .content span 
+        font-size: 1.6rem
+
+    .content .job 
+        font-size: 17px
+
+    button
+        font-size: 1.25rem
+
+
