--- a/src/styles/Footer.sass
+++ b/src/styles/Footer.sass
@@ -1,3 +1,4 @@
+@import Variaveis
 footer 
     margin-top: 1rem
     white-space: nowrap
@@ -15,3 +16,19 @@ footer
     gap: 0.5rem
     h4, .icon
         color:#314c58  
+
+@media screen and (max-width: 350px)
+    footer 
+        font-size: 0.7rem
+
+@media screen and (min-width: 350px)
+    footer 
+        font-size: 0.8rem
+
+@media screen and (min-width: 400px)
+    footer 
+        font-size: 0.9rem
+
+@media screen and (min-width: $xxxl)
+    footer 
+        font-size: 1.2rem
