--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -117,7 +117,7 @@ main
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr))
     align-items: center
     justify-items: center
-    gap: 1rem
+    gap: 1.5rem
 
 .projects-container
     min-height: 70vh
@@ -237,6 +237,9 @@ main
     width: 50%
 
 .contacts-container
+    display: flex
+    align-items: center
+    justify-content: center
     min-height: 60vh
     font-family: 'Ubuntu Mono', monospace
     font-size: 2rem
@@ -244,12 +247,12 @@ main
     display: flex
     flex-direction: column
     align-items: start
-    justify-content: center
+    justify-content: start
     white-space: nowrap
     padding-left: 5.5rem
     gap: 1.6rem
     color: #252525
-
+      
 .contact
     display: flex
     align-items: center
@@ -302,6 +305,15 @@ main
         height: 1.5rem
         gap: 0.6rem
 
+    .contacts-container
+        min-height: 50vh
+        font-size: 1rem
+        overflow-wrap: break-word
+        padding-left: 1rem
+        white-space: wrap
+        h4
+            max-width: 220px
+
 @media screen and (min-width: 350px)
     .titulo
         font-size: 1.5rem
@@ -326,6 +338,14 @@ main
         width: 8rem
         height: 1.5rem
         gap: 0.6rem
+
+    .contacts-container
+        font-size: 1.2rem
+        overflow-wrap: break-word
+        padding-left: 2rem
+        white-space: wrap
+        h4
+            max-width: 260px
 
 @media screen and (min-width: $xs)
     main
@@ -358,6 +378,13 @@ main
         width: 10rem
         height: 2rem
         gap: 0.3rem
+
+    .contacts-container
+        font-size: 1.5rem
+        padding-left: 3rem
+        white-space: wrap
+        h4
+            max-width: 350px
 
 @media screen and (min-width: $s)
     main
@@ -406,6 +433,13 @@ main
         margin-left: 3.5rem
         grid-template-columns: repeat(auto-fit, minmax(180px, 1fr))
         gap: 1.2rem
+
+    .contacts-container
+        font-size: 1.6rem
+        padding-left: 3.5rem
+        white-space: wrap
+        h4
+            max-width: 550px  
         
 @media screen and (min-width: $m)
     main
@@ -439,6 +473,7 @@ main
         font-size: 7rem
         width: auto
         margin-left: 0
+
     .skills-container
         grid-template-columns: repeat(auto-fit, minmax(220px, 1fr))
 
@@ -474,6 +509,13 @@ main
         font-size: 8rem
         width: auto
         margin-left: 0
+
+    .contacts-container
+        font-size: 2rem
+        padding-left: 5.5rem
+        white-space: wrap
+        h4
+            max-width: fit-content
 
 @media screen and (min-width: $xl)
     main
@@ -556,7 +598,8 @@ main
     .projects-title 
         justify-content: start
         align-items: start
-        margin: 40px 0 2rem 90px
+        font-size: 5rem
+        margin: 40px 0 2rem 140px
 
     .titulo
         margin-left: 2px
@@ -577,4 +620,14 @@ main
         width: auto
         margin-left: 0
 
+    .skills-container
+        font-size: 2.1rem
+        margin-left: 7rem
 
+    .percentage-container
+        width: 12rem
+        height: 2.5rem
+        gap: 0.4rem
+
+    .contacts-container
+        padding-left: 8rem
