--- a/src/styles/Footer.sass
+++ b/src/styles/Footer.sass
@@ -1,4 +1,3 @@
-@import Variaveis
 
 footer 
     margin-top: 1rem
@@ -30,6 +29,6 @@ footer
     footer 
         font-size: 0.9rem
 
-@media screen and (min-width: $xxxl)
+@media screen and (min-width: 1920px)
     footer 
         font-size: 1.2rem
