--- a/src/components/Home.sass
+++ b/src/components/Home.sass
@@ -6,7 +6,6 @@
 #root 
     background: $main-color
     background-size: 400%
-    overflow: hidden
 
 body
     font-size: $base-font-size
@@ -72,6 +71,7 @@ main
     text-align: center
     white-space: wrap
     letter-spacing: -0.2px
+    display: flex
 
 .icon-container
     height: 100%
