--- a/src/components/Home.sass
+++ b/src/components/Home.sass
@@ -70,7 +70,7 @@ main
     font-family: 'Manrope', sans-serif
     font-weight: 200
     text-align: center
-    white-space: wrap
+    white-space: normal
     letter-spacing: -0.2px
     display: flex
 
