--- a/src/components/Home.sass
+++ b/src/components/Home.sass
@@ -249,7 +249,7 @@ main
     flex-direction: column
     align-items: start
     justify-content: start
-    white-space: nowrap
+    white-space: normal
     padding-left: 5.5rem
     gap: 1.6rem
     color: #252525
