--- a/src/components/Home.sass
+++ b/src/components/Home.sass
@@ -237,6 +237,10 @@ main
     background-color: #61ac2f
     width: 50%
 
+.SQL 
+    background-color: #702fac
+    width: 65%
+    
 .contacts-container
     display: flex
     align-items: center
