--- a/src/components/Home.sass
+++ b/src/components/Home.sass
@@ -14,8 +14,8 @@ body
 main
     margin-left: auto
     margin-right: auto
-    padding-left: 0.5rem 
-    padding-right: 0.5rem
+    padding-left: 0.65rem 
+    padding-right: 0.65rem
     display: grid
     grid-template-columns: repeat(1, minmax(250px, 1fr))
     justify-content: center
@@ -118,7 +118,8 @@ main
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr))
     align-items: center
     justify-items: center
-    gap: 1.5rem
+    gap: 1rem
+    margin-left: 1rem
 
 .projects-container
     min-height: 70vh
@@ -156,6 +157,7 @@ main
 
 .skill h4 
     margin-bottom: 0.2rem
+    font-size: 1.7rem
     
 .percentage-container
     border: solid black
@@ -211,7 +213,7 @@ main
 
 .node 
     background-color: #17803c
-    width: 45%
+    width: 60%
 
 .firebase 
     background-color: #d1c82c
@@ -239,7 +241,7 @@ main
 
 .SQL 
     background-color: #702fac
-    width: 65%
+    width: 70%
     
 .contacts-container
     display: flex
@@ -257,7 +259,12 @@ main
     padding-left: 5.5rem
     gap: 1.6rem
     color: #252525
-      
+
+.contacts-container p 
+    font-weight: 550
+    max-width: 330px
+    overflow-wrap: break-word
+
 .contact
     display: flex
     align-items: center
@@ -382,7 +389,6 @@ main
     .percentage-container
         width: 10rem
         height: 2rem
-        gap: 0.3rem
 
     .contacts-container
         font-size: 1.5rem
@@ -414,16 +420,16 @@ main
 
     .titulo
         margin-left: 2px
-        font-size: 1.5rem
+        font-size: 1.4rem
         
     .titulo2
-        font-size: 2.8rem
+        font-size: 2.7rem
 
     .descricao
-        font-size: 1.2rem
+        font-size: 1.1rem
 
     .descricao2
-        font-size: 0.9rem
+        font-size: 0.8rem
 
     .icon-container
         font-size: 6rem
@@ -435,9 +441,10 @@ main
         align-items: stretch
 
     .skills-container
-        margin-left: 3.5rem
+        margin-left: 4rem
+        margin-right: 2rem
         grid-template-columns: repeat(auto-fit, minmax(180px, 1fr))
-        gap: 1.2rem
+        gap: 0.8rem
 
     .contacts-container
         font-size: 1.6rem
@@ -445,6 +452,8 @@ main
         white-space: wrap
         h4
             max-width: 550px  
+    .contacts-container p 
+        max-width: 800px
         
 @media screen and (min-width: $m)
     main
@@ -463,16 +472,16 @@ main
 
     .titulo
         margin-left: 2px
-        font-size: 1.6rem
+        font-size: 1.4rem
 
     .titulo2
-        font-size: 2.9rem
+        font-size: 2.8rem
 
     .descricao
-        font-size: 1.3rem
+        font-size: 1.2rem
 
     .descricao2
-        font-size: 1rem
+        font-size: 0.9rem
 
     .icon-container
         font-size: 7rem
@@ -499,16 +508,16 @@ main
 
     .titulo
         margin-left: 2px
-        font-size: 1.4rem
-
-    .titulo2
-        font-size: 3.2rem
-
-    .descricao
         font-size: 1.5rem
 
-    .descricao2
+    .titulo2
+        font-size: 2.8rem
+
+    .descricao
         font-size: 1.2rem
+
+    .descricao2
+        font-size: 1rem
 
     .icon-container
         font-size: 8rem
@@ -539,13 +548,13 @@ main
 
     .titulo
         margin-left: 2px
-        font-size: 2rem
+        font-size: 1.6rem
 
     .titulo2
-        font-size: 3.7rem
+        font-size: 3rem
 
     .descricao
-        font-size: 1.4rem
+        font-size: 1.3rem
 
     .descricao2
         font-size: 1.1rem
