organização de projetos e skills

--- a/src/components/Home.sass
+++ b/src/components/Home.sass
@@ -178,7 +178,7 @@ main
 
 .native 
     background-color: #2e0d56
-    width: 60%
+    width: 70%
 
 .html 
     background-color: #236782
@@ -243,7 +243,11 @@ main
 .SQL 
     background-color: #702fac
     width: 70%
-    
+
+.kotlin
+    background-color: #a03a9f
+    width: 30%
+
 .contacts-container
     display: flex
     align-items: center
