--- a/src/components/Card.sass
+++ b/src/components/Card.sass
@@ -2,7 +2,7 @@
 .card
     font-family: 'Manrope', sans-serif
     width: 245px
-    height: 385px
+    height: 390px
     background: #2b434e
     border-radius: 15px
     box-shadow: 1px 5px 60px 0px rgba(0, 0, 0, 0.2)
@@ -80,7 +80,7 @@
     flex-direction: row
     gap: 0.5rem
     a
-        font-family: 'Ubuntu Mono', monospace
+        font-family: 'Manrope', sans-serif
         text-decoration: none
         color: #252525
 button
