--- a/src/components/Home.sass
+++ b/src/components/Home.sass
@@ -31,7 +31,7 @@ main
     white-space: nowrap
     margin-left: 0.8rem
     margin-top: 2.6rem
-    font-family: 'Libre Bodoni', sans-serif
+    font-family: 'Libre Bodoni', 'Manrope', sans-serif
 
 .titulo
     color: #253b46
@@ -138,8 +138,8 @@ main
 
 .skills-container
     min-height: 60vh
-    font-family: 'Ubuntu Mono', monospace
-    font-size: 1.8rem
+    font-family: 'Manrope', sans-serif
+    font-size: 1.6rem
     margin-bottom: 3rem
     display: grid
     grid-template-columns: repeat(2, minmax(250px, 1fr))
@@ -158,7 +158,8 @@ main
 
 .skill h4 
     margin-bottom: 0.2rem
-    font-size: 1.7rem
+    font-size: 1.35rem
+    font-weight: bold
     
 .percentage-container
     border: solid black
@@ -385,7 +386,7 @@ main
         font-size: 0.8rem
 
     .skills-container
-        font-size: 1.8rem
+        font-size: 1.6rem
         grid-template-columns: repeat(2, minmax(200px, 1fr))
 
     .skill
@@ -640,7 +641,7 @@ main
         margin-left: 0
 
     .skills-container
-        font-size: 2.1rem
+        font-size: 2rem
         margin-left: 7rem
 
     .percentage-container
