correção nav container

--- a/src/components/Header.sass
+++ b/src/components/Header.sass
@@ -79,6 +79,22 @@ body
       cursor: pointer
       text-decoration: underline
 
+.nav-container
+    margin-left: 2.8rem
+    padding-left: 2rem
+    display: none
+
+.nav-container a
+    color: #253b46
+    text-shadow: 1px 3px 8px rgba(0,0,0,0.1)
+    font-family: 'Manrope', sans-serif
+    margin: 0px 15px 0px 15px
+    text-decoration: none
+
+    &:hover
+        cursor: pointer
+        text-decoration: underline
+
 .social-icons-container
   display: flex
   margin-left: auto
